fixed the social links out of the box when smaller

--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ main section {
   display: flex;
   flex-direction: column;
   width: 40%;
-  height: 80vh;
+  min-height: 80vh;
   padding: 1rem;
   background-color: rgba(173, 173, 173, 0.5);
   box-shadow: 0px 3px 12px 5px rgba(0, 0, 0, 0.64);
@@ -174,7 +174,7 @@ main section {
   transition: 0.5s;
 }
 
-.event-img:hover{
+.event-img:hover {
   width: 29%;
 }
 
@@ -339,7 +339,7 @@ footer a:hover {
 @media only screen and (min-width: 576px) {
   main {
     /* border: 5px solid rgb(0, 174, 255); */
-    margin-top: -80rem;
+    margin-top: -145vh;
   }
 
   .boxes {
@@ -379,12 +379,12 @@ footer a:hover {
 @media only screen and (min-width: 768px) {
   main {
     /* border: 5px solid yellow; */
-    margin-top: -80rem;
+    /* margin-top: -80rem; */
   }
 
   .boxes {
     width: 70%;
-    height: 65vh;
+    /* height: 65vh; */
   }
 
   #contact {
